// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetoxRuntimeErrorBuilder abortedDetoxInit 1`] = `
[DetoxRuntimeError: Aborted detox.init() execution, and now running detox.cleanup()

HINT: Most likely, your test runner is tearing down the suite due to the timeout error]
`;

exports[`DetoxRuntimeErrorBuilder cantFindApp - multiple apps 1`] = `
[DetoxRuntimeError: Can't find an app config with name "steak".

HINT: Maybe you meant one of these app names?
* fish
* chips
* hummus
* beer]
`;

exports[`DetoxRuntimeErrorBuilder cantFindApp - single app 1`] = `
[DetoxRuntimeError: Can't find an app config with name "unicorn".

HINT: Actually, you don't have multiple apps defined in your config.
Hence, either you don't need to call device.selectApp("unicorn") at all,
or, your apps config is missing that app. See the actual contents:

{
  default: {
    type: 'ios.app',
    binaryPath: 'path/to/app'
  }
}]
`;

exports[`DetoxRuntimeErrorBuilder invalidTestSummary - afterEach 1`] = `
[DetoxRuntimeError: Invalid test summary was passed to detox.afterEach(testSummary)
Expected to get an object of type: { title: string; fullName: string; status: "running" | "passed" | "failed"; }

HINT: Maybe you are still using an old undocumented signature detox.beforeEach(string, string, string) in init.js ?
See the article for the guidance: https://github.com/wix/detox/blob/master/docs/APIRef.TestLifecycle.md
testSummary was: 

{
  weird: [Array]
}]
`;

exports[`DetoxRuntimeErrorBuilder invalidTestSummary - beforeEach 1`] = `
[DetoxRuntimeError: Invalid test summary was passed to detox.beforeEach(testSummary)
Expected to get an object of type: { title: string; fullName: string; status: "running" | "passed" | "failed"; }

HINT: Maybe you are still using an old undocumented signature detox.beforeEach(string, string, string) in init.js ?
See the article for the guidance: https://github.com/wix/detox/blob/master/docs/APIRef.TestLifecycle.md
testSummary was: 

deviceName]
`;

exports[`DetoxRuntimeErrorBuilder invalidTestSummaryStatus - afterEach 1`] = `
[DetoxRuntimeError: Invalid test summary was passed to detox.afterEach(testSummary)
Expected to get an object of type: { title: string; fullName: string; status: "running" | "passed" | "failed"; }

HINT: Maybe you are still using an old undocumented signature detox.beforeEach(string, string, string) in init.js ?
See the article for the guidance: https://github.com/wix/detox/blob/master/docs/APIRef.TestLifecycle.md
testSummary was: 

{
  title: 'foo test',
  fullName: 'suite foo test',
  status: 'uncertain'
}]
`;
